--- a/assets/css/elements/_footer.scss
+++ b/assets/css/elements/_footer.scss
@@ -5,7 +5,6 @@ footer {
   justify-content: center;
   flex-direction: column;
   padding: 40px 0;
-  margin-top: 120px;
   .footer-logo {
     max-width: 200px;
     margin-bottom: 20px;
