--- a/assets/css/elements/_galeria.scss
+++ b/assets/css/elements/_galeria.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   flex-direction: column;
   position: relative;
+  overflow-x: hidden;
 
   h2 {
     @extend %section-title;
