--- a/assets/css/elements/_marcas.scss
+++ b/assets/css/elements/_marcas.scss
@@ -13,6 +13,10 @@
   }
 }
 
+.apoiadores {
+  padding-bottom: 7.5rem;
+}
+
 .marcas {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
