--- a/assets/css/elements/_sigam-nos.scss
+++ b/assets/css/elements/_sigam-nos.scss
@@ -21,7 +21,6 @@
 
   .instagram-iframe {
     position: relative;
-    overflow: hidden;
     width: 100%;
     padding-top: 56.25%;
 
